force-app/main/default/objects/Huddle_Change_Log__c/Huddle_Change_Log__c.object-meta.xml
<CustomObject>
    <description>The audit backbone. One record per action Huddle takes (strategy logged, Task created, open decision raised, decision resolved, digest generated), with a lookup back to the strategy log so every change traces to the meeting recap that produced it. Not optional: no Huddle write happens without a row here.</description>
    <label>Huddle Change Log</label>
    <nameField>
        <displayFormat>HCHG-{00000}</displayFormat>
        <label>Change Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Huddle Change Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>