force-app/main/default/objects/Huddle_Change_Log__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <label>Assigned To</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Huddle_Change_Logs_Assigned</relationshipName>
    <relationshipLabel>Huddle Change Logs Assigned</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who the work landed on. Because Huddle assigns Tasks across people, "who got assigned what" is a first-class audit column, not a detail buried on the Task.</description>
</CustomField>