force-app/main/default/objects/Huddle_Change_Log__c/fields/Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Type__c</fullName>
    <label>Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategy Logged</fullName>
            </value>
            <value>
                <fullName>Task Created</fullName>
            </value>
            <value>
                <fullName>Decision Raised</fullName>
            </value>
            <value>
                <fullName>Decision Resolved</fullName>
            </value>
            <value>
                <fullName>Digest Generated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>What kind of action produced this audit row.</description>
</CustomField>