force-app/main/default/objects/Huddle_Change_Log__c/fields/Created_By_Rep__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Rep__c</fullName>
    <label>Created By Rep</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Huddle_Change_Logs_Created</relationshipName>
    <relationshipLabel>Huddle Change Logs Created</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The attendee whose recap triggered this action.</description>
</CustomField>