force-app/main/default/objects/Huddle_Change_Log__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <label>Detail</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>What exactly happened, in one line: the task subject and due date, the question raised, or the strategy captured.</description>
</CustomField>