force-app/main/default/objects/Huddle_Change_Log__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Huddle_Change_Logs</relationshipName>
    <relationshipLabel>Huddle Change Logs</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The deal in play, so the console can filter the audit trail by Opportunity.</description>
</CustomField>