force-app/main/default/objects/Huddle_Change_Log__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <label>Related Record Id</label>
    <type>Text</type>
    <length>18</length>
    <externalId>true</externalId>
    <description>The Id of the record Huddle created or changed (Strategy Log, Task, or Open Decision).</description>
</CustomField>