force-app/main/default/objects/Huddle_Change_Log__c/fields/Related_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Name__c</fullName>
    <label>Related Record Name</label>
    <type>Text</type>
    <length>255</length>
    <description>Human-readable label of that record, so the audit tab is readable without resolving ids.</description>
</CustomField>