force-app/main/default/objects/Huddle_Change_Log__c/fields/Rep_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Rep_Confirmed__c</fullName>
    <label>Rep Confirmed</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>True when the attendee explicitly confirmed this action before it was written. Cross-person Task assignment is never written without it.</description>
</CustomField>