force-app/main/default/objects/Huddle_Change_Log__c/fields/Source_Strategy_Log__c.field-meta.xml
<CustomField>
    <fullName>Source_Strategy_Log__c</fullName>
    <label>Source Strategy Log</label>
    <type>Lookup</type>
    <referenceTo>Huddle_Strategy_Log__c</referenceTo>
    <relationshipName>Change_Logs</relationshipName>
    <relationshipLabel>Change Logs</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The meeting recap this change came out of. Every row traces back to the words that caused it.</description>
</CustomField>