force-app/main/default/objects/Huddle_Change_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Change_Type__c</columns>
    <columns>Related_Record_Name__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Created_By_Rep__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Changes</label>
</ListView>